opam-version: "1.2"
name: "dtc-pb"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-dtc-pb"
doc: "https://vbmithr.github.io/ocaml-dtc-pb/doc"
license: "ISC"
dev-repo: "git+https://github.com/vbmithr/ocaml-dtc-pb.git"
bug-reports: "https://github.com/vbmithr/ocaml-dtc-pb/issues"
tags: []
available: [ ocaml-version >= "4.03.0" ]
depends: [
  "jbuilder" {build & >= "1.0+beta16"}
  "ocaml-protoc" {"1.2.0"}
  "ocplib-endian" {>= "1.0"}
]
depopts: []
build: [ "jbuilder" "build" "-j" jobs "-p" name "@install" ]
