opam-version: "2.0"
name: "dtc-pb"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-dtc-pb"
doc: "https://vbmithr.github.io/ocaml-dtc-pb/doc"
license: "ISC"
dev-repo: "git+https://github.com/vbmithr/ocaml-dtc-pb.git"
bug-reports: "https://github.com/vbmithr/ocaml-dtc-pb/issues"
tags: []
depends: [
  "dune" {build & >= "1.0.0"}
  "piqi" {build & >= "0.7.6"}
  "piqilib" {>= "0.6.14"}
  "ocplib-endian" {>= "1.0"}
]
build: [ "dune" "build" "-j" jobs "-p" name "@install" ]
